--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.2.1",
+    "@types/ramda": "^0.26.18",
     "@types/styled-components": "^4.1.18",
     "next": "latest",
+    "ramda": "^0.26.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-spring": "^8.0.27",
