--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
-    "build": "next build",
+    "build-next": "next build",
     "start": "next start",
     "type-check": "tsc",
-    "lint": "tslint --project ."
+    "lint": "tslint --project .",
+
+    "serve": "firebase serve"
   },
   "dependencies": {
     "@material-ui/core": "^4.2.1",
