--- a/package.json
+++ b/package.json
@@ -1,32 +1,43 @@
 {
-  "name": "with-typescript",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "next",
-    "build-next": "next build",
-    "start": "next start",
-    "type-check": "tsc",
-    "lint": "tslint --project .",
-
-    "serve": "firebase serve"
-  },
+  "name": "bailig",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.2.1",
-    "@types/ramda": "^0.26.18",
+    "@material-ui/core": "^4.3.0",
+    "@types/jest": "24.0.15",
+    "@types/node": "12.6.8",
+    "@types/react": "16.8.23",
+    "@types/react-dom": "16.8.5",
     "@types/styled-components": "^4.1.18",
-    "next": "latest",
-    "ramda": "^0.26.1",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-spring": "^8.0.27",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-scripts": "3.0.1",
     "styled-components": "^4.3.2"
   },
-  "devDependencies": {
-    "@types/node": "^11.13.9",
-    "@types/react": "^16.8.15",
-    "@types/react-dom": "^16.0.11",
-    "tslint": "^5.18.0",
-    "typescript": "^3.5.2"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "lint": "tslint --project ."
   },
-  "license": "ISC"
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "tslint": "^5.18.0",
+    "typescript": "^3.5.3"
+  }
 }
